--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -2,3 +2,15 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 hello = Hello
+label.register.title = Hospital Patient Registration Page
+label.register.registerform = Registration Form
+label.register.username =  Username
+label.register.msg1 =  This will be your login user name
+label.register.password = Password
+label.register.passwordconfirm = Password Confirm
+label.register.email = Email Address
+label.register.address = Address
+label.register.dob = Date of Birth
+label.register.msg3 = You will receive an email to complete the registration and validation process
+label.register.msg4 = Be sure to check your spam folders
+label.register.btn = Register
