change to test vn and english language

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -14,3 +14,6 @@ label.register.dob = Date of Birth
 label.register.msg3 = You will receive an email to complete the registration and validation process
 label.register.msg4 = Be sure to check your spam folders
 label.register.btn = Register
+label.register.msg5 =I agree with the
+label.register.msg6=terms and conditions
+label.register.msg7=for Registration.
