add multi lang to resetpass jsp

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -4,16 +4,21 @@
 hello = Hello
 label.register.title = Hospital Patient Registration Page
 label.register.registerform = Registration Form
-label.register.username =  Username
+label.username = Username
 label.register.msg1 =  This will be your login username
-label.register.password = Password
-label.register.passwordconfirm = Password Confirm
-label.register.email = Email Address
-label.register.address = Address
-label.register.dob = Date of Birth
+label.password = Password
+label.passwordconfirm = Password Confirm
+label.email = Email Address
+label.address = Address
+label.dob = Date of Birth
 label.register.msg3 = You will receive an email to complete the registration and validation process
 label.register.msg4 = Be sure to check your spam folders
 label.register.btn = Register
 label.register.msg5 =I agree with the
 label.register.msg6=terms and conditions
 label.register.msg7=for Registration.
+label.resetpass.title = Hospital Reset Password Page
+label.resetpass.forgot = Forgot Password?
+label.resetpass.resetsuccess = Reset Successfully
+label.resetpass.resetbtn = Reset Password
+label.resetpass.msg1 = You can reset your password here.
