--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,9 +4,25 @@
         <servlet-name>Registration</servlet-name>
         <servlet-class>User.Registration</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ForgotPass</servlet-name>
+        <servlet-class>User.ForgotPass</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>HospitalReg</servlet-name>
+        <servlet-class>Hospital.HospitalReg</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Registration</servlet-name>
         <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ForgotPass</servlet-name>
+        <url-pattern>/forgot</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>HospitalReg</servlet-name>
+        <url-pattern>/HospitalRegistration</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
