--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,6 @@
         <servlet-class>User.Registration</servlet-class>
     </servlet>
     <servlet>
-<<<<<<< HEAD
         <servlet-name>DoctorController</servlet-name>
         <servlet-class>User.DoctorController</servlet-class>
     </servlet>
@@ -16,39 +15,39 @@
     <servlet>
         <servlet-name>RateController</servlet-name>
         <servlet-class>User.RateController</servlet-class>
-=======
+    </servlet>
+    <servlet>
         <servlet-name>ForgotPass</servlet-name>
         <servlet-class>User.ForgotPass</servlet-class>
     </servlet>
+    
     <servlet>
         <servlet-name>HospitalReg</servlet-name>
         <servlet-class>Hospital.HospitalReg</servlet-class>
->>>>>>> c2826f34f1e2fb681870f643917280d53eba55d6
     </servlet>
     <servlet-mapping>
         <servlet-name>Registration</servlet-name>
         <url-pattern>/register</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-<<<<<<< HEAD
         <servlet-name>DoctorController</servlet-name>
-        <url-pattern>/DoctorController</url-pattern>
+        <url-pattern>/doctor</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>CommentController</servlet-name>
-        <url-pattern>/CommentController</url-pattern>
+        <url-pattern>/comment</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>RateController</servlet-name>
-        <url-pattern>/RateController</url-pattern>
-=======
+        <url-pattern>/rate</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>ForgotPass</servlet-name>
         <url-pattern>/forgot</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>HospitalReg</servlet-name>
         <url-pattern>/HospitalRegistration</url-pattern>
->>>>>>> c2826f34f1e2fb681870f643917280d53eba55d6
     </servlet-mapping>
     <session-config>
         <session-timeout>
