--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -1,6 +1,9 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
+EN = English
+VN = Vietnam
+FR = French
 label.register.registerform = Registration Form
 label.username = Username
 label.register.msg1 =  This will be your login username
