--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -26,3 +26,4 @@ label.reset.reset = Reset Password
 label.reset.newpass = New Password
 label.reset.msg1 = Make sure your password is strong and easy to remember
 label.reset.btn = Reset Password
+label.home.title = Doctor STRANGE
