--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 /target/
-nb-configuration.xml
-src/main/webapp/MainUI/home.jsp
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
