--- a/pom.xml
+++ b/pom.xml
@@ -65,19 +65,20 @@
             <version>3.7</version>
         </dependency>
 
+        <!-- Apache Commons FileUpload -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>5.0.6.RELEASE</version>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
         </dependency>
 
+        <!-- MySQL JDBC driver -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>5.0.6.RELEASE</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.46</version>
         </dependency>
-
-
+        
     </dependencies>
 
     <build>
