multilang testing for home

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -4,26 +4,33 @@
 EN = English
 VN = Vietnam
 FR = French
-label.register.registerform = Registration Form
-label.username = Username
-label.register.msg1 =  This will be your login username
-label.password = Password
-label.passwordconfirm = Password Confirm
-label.email = Email Address
-label.address = Address
-label.dob = Date of Birth
-label.register.msg3 = You will receive an email to complete the registration and validation process
-label.register.msg4 = Be sure to check your spam folders
-label.register.btn = Register
-label.register.msg5 =I agree with the
-label.register.msg6=terms and conditions
-label.register.msg7=for Registration.
-label.forgotpass.forgot = Forgot Password?
-label.forgotpass.msg1 = By clicking "Reset Password" we will send a password reset link
-label.forgotpass.resetsuccess = Reset Successfully
-label.forgotpass.resetbtn = Reset Password
-label.reset.reset = Reset Password
-label.reset.newpass = New Password
-label.reset.msg1 = Make sure your password is strong and easy to remember
-label.reset.btn = Reset Password
-label.home.title = Doctor STRANGE
+register.registerform = Registration Form
+username = Username
+password = Password
+passwordconfirm = Password Confirm
+email = Email Address
+address = Address
+dob = Date of Birth
+firstname = First Name
+lastname = Last Name
+register.msg1 =  This will be your login username
+register.msg3 = You will receive an email to complete the registration and validation process
+register.msg4 = Be sure to check your spam folders
+register.btn = Register
+register.msg5 =I agree with the
+register.msg6=terms and conditions
+register.msg7=for Registration.
+forgotpass.forgot = Forgot Password?
+forgotpass.msg1 = By clicking "Reset Password" we will send a password reset link
+forgotpass.resetsuccess = Reset Successfully
+forgotpass.resetbtn = Reset Password
+reset.reset = Reset Password
+reset.newpass = New Password
+reset.msg1 = Make sure your password is strong and easy to remember
+reset.btn = Reset Password
+home.title = Doctor
+home.finddoc = Find Your Doctor
+home.appt = Appointment
+home.language = Language
+home.contact = Contact Us
+home.signinup = Sign In/Sign Up
