--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -71,11 +71,16 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>PatientController</servlet-name>
-        <url-pattern>/PatientController</url-pattern>
+        <url-pattern>/patient</url-pattern>
     </servlet-mapping>
+    
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    
+    <welcome-file-list>  
+        <welcome-file>home.jsp</welcome-file>  
+    </welcome-file-list>  
 </web-app>
