--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -28,7 +28,7 @@ reset.reset = Reset Password
 reset.newpass = New Password
 reset.msg1 = Make sure your password is strong and easy to remember
 reset.btn = Reset Password
-home.title = Doctor
+home.title = Doctor STRANGE
 home.finddoc = Find Your Doctor
 home.appt = Appointment
 home.language = Language
