--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -4,7 +4,6 @@
 EN = English
 VN = Vietnam
 FR = French
-register.registerform = Registration Form
 username = Username
 password = Password
 passwordconfirm = Password Confirm
@@ -13,6 +12,13 @@ address = Address
 dob = Date of Birth
 firstname = First Name
 lastname = Last Name
+title = Doctor STRANGE
+finddoc = Find Your Doctor
+appt = Appointment
+language = Language
+contact = Contact Us
+signinup = Sign In/Sign Up
+register.registerform = Registration Form
 register.msg1 =  This will be your login username
 register.msg3 = You will receive an email to complete the registration and validation process
 register.msg4 = Be sure to check your spam folders
@@ -28,9 +34,3 @@ reset.reset = Reset Password
 reset.newpass = New Password
 reset.msg1 = Make sure your password is strong and easy to remember
 reset.btn = Reset Password
-home.title = Doctor STRANGE
-home.finddoc = Find Your Doctor
-home.appt = Appointment
-home.language = Language
-home.contact = Contact Us
-home.signinup = Sign In/Sign Up
