--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -12,12 +12,12 @@ address = Address
 dob = Date of Birth
 firstname = First Name
 lastname = Last Name
-title = Doctor STRANGE
 finddoc = Find Your Doctor
 appt = Appointment
 language = Language
 contact = Contact Us
 signinup = Sign In/Sign Up
+signout = Log out
 register.registerform = Registration Form
 register.msg1 =  This will be your login username
 register.msg3 = You will receive an email to complete the registration and validation process
