--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,10 @@
         <servlet-class>User.Login</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>Logout</servlet-name>
+        <servlet-class>User.Logout</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>PatientController</servlet-name>
         <servlet-class>User.PatientController</servlet-class>
     </servlet>
@@ -68,6 +72,10 @@
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Logout</servlet-name>
+        <url-pattern>/logout</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>PatientController</servlet-name>
