update little language

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -7,7 +7,7 @@ FR = French
 username = Username
 password = Password
 passwordconfirm = Password Confirm
-email = Email Address
+email = Email
 address = Address
 dob = Date of Birth
 firstname = First Name
@@ -18,6 +18,20 @@ language = Language
 contact = Contact Us
 signinup = Sign In/Sign Up
 signout = Log out
+home = Home
+termsofservice = Terms of Service
+privacypolicy = Privacy Policy
+phonenumber = Phone Number
+usefullinks = Useful Links
+other = Other
+aboutus = About Us
+services = Services
+facts = Facts
+clients = Our Clients
+team = Team
+findalldoctor = Find All Doctor
+setanappointment =Set An Appointment
+health = Health
 register.registerform = Registration Form
 register.msg1 =  This will be your login username
 register.msg3 = You will receive an email to complete the registration and validation process
