--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
             <version>5.1.46</version>
         </dependency>
         
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
+
+        
     </dependencies>
 
     <build>
