--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -16,6 +16,28 @@ finddoc = Find Your Doctor
 appt = Appointment
 language = Language
 contact = Contact Us
+signup = Sign Up
+yourprofile = Your Profile
+backtohomepage = Back to Homepage
+rememberme = Remember Me
+imnew = I'm New
+ihaveanaccount =  I have an account
+getstarted = Get Started
+mission = Mission 
+plan = Plan
+vision = Vision
+becomeamember = Become A Member
+bookmarkyourdoctor = Bookmark Your Doctor
+gethealthinformation = Get Health Information
+community = Community
+name = Name
+subject = Subject
+message = Message
+sendmessage = Send Message
+healthservice = Health Service
+medicalspecialities = Medical Specialities
+numberofdoctor = Number Of Doctor
+hoursaday = Hours a Day
 signinup = Sign In/Sign Up
 signout = Log out
 home = Home
