--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -40,7 +40,9 @@ numberofdoctor = Number Of Doctor
 hoursaday = Hours a Day
 contact = Contact
 signinup = Sign In/Sign Up
-signout = Log out
+greeting = Hi
+yourprofile = Your Profile
+signout = Log Out
 home = Home
 termsofservice = Terms of Service
 privacypolicy = Privacy Policy
@@ -59,7 +61,7 @@ searchdotorbyname = Search doctors by name, speciality
 male = Male
 female = Female
 other = Other
-fullname = Fullname
+fullname = Full name
 patientinformation = Patient Information
 gender = Gender
 appointmentdetail = Appointment Detail
