--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -103,3 +103,30 @@ viewprofile = View Profile
 moreinfo = More Info
 yourrating = Your Rating
 comment = Comment
+resetyourpassword = Reset your password
+yourpassword = Your password
+resetyourpassword.msg1 = Enter your email address and we will send you a link to reset your password.
+resetyourpassword.btn1 = Send password reset email
+forwardEverything.msg1 = Please log in with your account to continue
+forwardEverything.msg2 = Click here to go back to homepage if your browser does not automatically re-direct you.
+loginsuccess = Great! You have logged in successfully.
+hospitaladminname = Hospital Admin Name
+hospitaladminemail = Hospital Admin Email Address
+add = Add
+acceptinsurance = Accept Insurance
+login = Login
+forgotemailorpassword = Forgot your email or password
+registeraccount = Register Account
+register.msg1 = Please indicate that you accept the Terms and Conditions
+register.msg2 = I agree with the
+register.msg3 = You may read our terms and conditions by clicking on this link
+register.msg4 = terms and conditions
+register.msg5 = for Registration.
+register.msg6 = You will receive an email to complete the registration and validation process.
+register.msg7 = Be sure to check your spam folders.
+alreadyhaveaccount = Already have account? Sign in.
+enterpassword = Enter your new password
+reenterpassword = Re-enter your password
+edit = Edit
+post = Post
+remove = Remove
