--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -100,7 +100,7 @@ doctorfound = doctors found by keyword (Keyword)
 filter = Filter Your Result
 rate = Rate
 viewprofile = View Profile
-moreinfo = More Info
+moreinfor = More Infor
 yourrating = Your Rating
 comment = Comment
 resetyourpassword = Reset your password
@@ -130,3 +130,4 @@ reenterpassword = Re-enter your password
 edit = Edit
 post = Post
 remove = Remove
+hospitalfound = hospitals found by keyword (Keyword)
