content for home page

--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -131,3 +131,28 @@ edit = Edit
 post = Post
 remove = Remove
 hospitalfound = hospitals found by keyword (Keyword)
+previous = Previous
+next = Next
+home.msg1 = All doctors you need are here
+home.msg2 = provide a new solution to connect to all hospitals and doctors you need. What makes us better, makes you better.
+home.msg3 = Why Doctor Strange ?
+home.msg4 = There are full of specialties such as Obstetrics and Gynecology, Pediatricians, Internal general, Ear, nose and throat; Facial teeth, imaging and laboratory tests, including biochemistry, hematology, immunology, microbiology. System of equipment and machinery at the clinic is modern investment, imported from the advanced countries in the world, nice spacious rooms and clean rooms, helping customers feel comfortable and friendly as at home.
+home.msg5 = List of all doctor with full information
+home.msg6 = Fill a simple form and make an appointment with the doctor you want
+home.msg7 =  Healthcare
+home.msg8 = More than 500 doctors come from 8 biggest hospitals in Viet Nam with many kinds of speciality.
+home.msg9 = Provide the fastest way to connect patient to doctor
+home.msg10 = Cooperate with 20 hospitals 1000 doctors in 2020
+home.msg11 = Become the biggest healthcare ecosystem in Southeast Asia in 2020
+home.msg12 = We provide many services for patient and hospital can connect each other easily
+home.msg13 = Find doctors whom you need right now
+home.msg14 = Become one of us
+home.msg15 = Save your favorite doctor
+home.msg16 = Make an appointment with doctor
+home.msg17 = Health Information
+home.msg18 = Place for sharing
+home.msg19 = Astonishing Facts about the Doctor Strange
+home.msg20 = Who create great things
+home.msg21 = Become the leading hospital chain in Vietnam with the Doctor Strange brand name, providing comprehensive health care services - professional, leading professional quality, leading the application of technology, comparable with diseases regional and international institutions.
+home.msg22 = Doctor Strange is the leading healthcare system in Vietnam owning a state-of-the-art facilities system, the most up-to-date technology in the region and in the world.All medical equipment is imported from leading medical equipment companies in the world such as Beckman Coulter, Steris, GE (USA), Siemens Heathcare, Drager (Germany), Olympus (Japan), Swisslog (Switzerland) ... ensure the criteria of efficiency, safety, time saving and environmentally friendly.
+home.msg23 = Call us when you need
