--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -156,3 +156,5 @@ home.msg20 = Who create great things
 home.msg21 = Become the leading hospital chain in Vietnam with the Doctor Strange brand name, providing comprehensive health care services - professional, leading professional quality, leading the application of technology, comparable with diseases regional and international institutions.
 home.msg22 = Doctor Strange is the leading healthcare system in Vietnam owning a state-of-the-art facilities system, the most up-to-date technology in the region and in the world.All medical equipment is imported from leading medical equipment companies in the world such as Beckman Coulter, Steris, GE (USA), Siemens Heathcare, Drager (Germany), Olympus (Japan), Swisslog (Switzerland) ... ensure the criteria of efficiency, safety, time saving and environmentally friendly.
 home.msg23 = Call us when you need
+findhospital = Find Hospital
+searchhospitalbyname = Search Hospital By Name
