--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -158,3 +158,4 @@ home.msg22 = Doctor Strange is the leading healthcare system in Vietnam owning a
 home.msg23 = Call us when you need
 findhospital = Find Hospital
 searchhospitalbyname = Search Hospital By Name
+searchbtn = Search
