--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -159,3 +159,4 @@ home.msg23 = Call us when you need
 findhospital = Find Hospital
 searchhospitalbyname = Search Hospital By Name
 searchbtn = Search
+options = Options
