--- a/src/main/resources/text.properties
+++ b/src/main/resources/text.properties
@@ -110,12 +110,12 @@ resetyourpassword.btn1 = Send password reset email
 forwardEverything.msg1 = Please log in with your account to continue
 forwardEverything.msg2 = Click here to go back to homepage if your browser does not automatically re-direct you.
 loginsuccess = Great! You have logged in successfully.
-hospitaladminname = Hospital Admin Name
+hospitaladminname = Hospital Admin
 hospitaladminemail = Hospital Admin Email Address
 add = Add
 acceptinsurance = Accept Insurance
 login = Login
-forgotemailorpassword = Forgot your email or password
+forgotemailorpassword = Forgot your password?
 registeraccount = Register Account
 register.msg1 = Please indicate that you accept the Terms and Conditions
 register.msg2 = I agree with the
